# yauhau

./: .gitignore  .gitmodules  README.md  graph.dot  package.yaml  project.clj  stack.yaml
com.ohua.fetch/src/clojure/com/ohua/fetch/: accumulator.clj  cache_transform.clj  concurrent_io_transform.clj  ir_transform.clj
com.ohua.fetch/src/java/com/ohua/fetch/: Request.java  (+6 more)
examples/: README.md  Types.hs  blog.clj  blog.hs
haskell/: stack.yaml  yauhau-transform.cabal
haskell/src/Ohua/Transform/: Yauhau.hs
haskell/src/Yauhau/: Transform.hs
haskell/src/Yauhau/IR/: Utils.hs
haskell/test/: Spec.hs
jvm/: GenProjectClj.hs  RebuildAll.hs  cabal.sandbox.config  template.project.clj  yauhau-jvm.cabal
jvm/src/clojure/yauhau/: core.clj
jvm/src/eta/: Yauhau.hs
jvm/src/java/yauhau/: RequestTree.java  RequestTreeLeaf.java
jvm/src/java/yauhau/functions/: AccumOp.java  Caching.java  ConcurrentIO.java  FetchOp.java  Functionality.java  Store.java  UtilityOperators.java
jvm/src/java/yauhau/util/: SimpleSelect.java
muse/test/clojure/muse/: level_graph_test.clj
src/Ohua/Transform/: Yauhau.hs  Yauhau.hs~
src/Yauhau/: Run.hs
yauhau/experiment/clojure/yauhau/: modularity.clj  muse_experiment.clj  run_concurrency_test.clj  test_program.clj  yauhau_experiment.clj
yauhau/experiment/clojure/yauhau/util/: program.clj
yauhau/experiment/java/yauhau/functions/: CountImpl.java  Vector.java
yauhau/src/clojure/yauhau/: accumulator.clj  cache_transform.clj  concurrent_io_transform.clj  ir_transform.clj  side_effect_transform.clj
yauhau/src/clojure/yauhau/util/: loom.clj
yauhau/src/java/yauhau/: ConstDataSource.java  IDataSource.java  Request.java  RequestTree.java  RequestTreeBranch.java  RequestTreeLeaf.java  RequestTreeMultiLeaf.java
yauhau/src/java/yauhau/functions/: AccumOp.java  Caching.java  ConcurrentIO.java  ConstNull.java  FetchOp.java  Functionality.java  RequestOp.java  Store.java  UtilityOperators.java
yauhau/src/java/yauhau/operators/: AccumOp.java  Caching.java  ConcurrentIO.java  ConstNull.java  FetchOp.java  Functionality.java  Identity.java  MkReqBranch.java  MkReqLeaf.java  MkReqMultiLeaf.java  PackageArgs.java  RequestOp.java  Store.java  UtilityOperators.java
yauhau/src/java/yauhau/util/: Triple.java  Tuple.java
yauhau/test/clojure/yauhau/: bugs.clj  cache_experiment.clj  muse_experiment.clj  one_to_n_bug.clj  run_concurrency_test.clj  test_leaf_creation_inserter.clj  test_program.clj  test_smap_transform.clj  test_transform.clj  try_compile.clj  visual_if_rewrite.clj  visual_smap_rewrite.clj
yauhau/test/clojure/yauhau/bugs/: empty_tree.clj  if_debug.clj  insert_empties.clj  large_maps.clj  map_does_not_terminate.clj  overschedule.clj  singleton_list.clj
yauhau/test/clojure/yauhau/util/: program.clj
yauhau/test/java/yauhau/: IncDataSource.java
yauhau/test/java/yauhau/functions/: Assert.java  BuildReq.java  Trace.java
(+26 files in other folders)
