name:                yauhau-transform
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/JustusAdam/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yauhau.IR.Utils
                     , Yauhau.Transform
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , aeson
                     , fgl
                     , mtl
                     , lens
                     , containers
                     , unordered-containers
                     , hashable
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs
                     , NoImplicitPrelude

executable yauhau-transform-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yauhau-transform
                     , classy-prelude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs
                     , NoImplicitPrelude

test-suite yauhau-transform-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yauhau-transform
                     , classy-prelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs
                     , NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/JustusAdam/haskell
